Fix Android drag-and-drop engine flow and improve root-cause tracing/reporting (#2379)
* Refactor drag and drop cases for clarity

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>

* Remove setTargetStatusCode from booking test

Removed target status code setting in booking test.

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>

* Update src/main/java/com/shaft/gui/element/internal/Actions.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>

* fix: surface drag-and-drop root cause with clear caused-by details

Agent-Logs-Url: https://github.com/ShaftHQ/SHAFT_ENGINE/sessions/d9b77792-681f-40ec-b458-a8789170bcf1

Co-authored-by: MohabMohie <19201898+MohabMohie@users.noreply.github.com>

* fix: improve drag-drop root cause diagnostics for Android actions

Agent-Logs-Url: https://github.com/ShaftHQ/SHAFT_ENGINE/sessions/d9b77792-681f-40ec-b458-a8789170bcf1

Co-authored-by: MohabMohie <19201898+MohabMohie@users.noreply.github.com>

* fix: add granular drag-drop tracing and stabilize mobile element selection

Agent-Logs-Url: https://github.com/ShaftHQ/SHAFT_ENGINE/sessions/b046e303-1772-4d2a-a4ae-d19b737863b8

Co-authored-by: MohabMohie <19201898+MohabMohie@users.noreply.github.com>

* Update touch action test to check drag-l2 element

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>

* Update assertion in AndroidDragAndDropTest

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>

---------

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: MohabMohie <19201898+MohabMohie@users.noreply.github.com>